# AreaA-data_modeling_and_schemas

./: .gitignore  Czochralski_growth_experiments.yaml  README.md  Synthesis_Fabian.yaml  USER.archive.yaml  USER2.archive.yaml  basic_yaml_structure.yaml  bridgman.archive.yaml  bridgman_data.archive.yaml  chemical_vapor_transport_data.archive.yaml  czochralski_data.archive.yaml  epitaxy HvW.yaml  flux_growth_data.archiv.yaml  fz_IKZ_PROCESS.archive.yaml  fz_IKZ_data_schema.yaml  melt_czochralski_app-def_data.archive.yaml  melt_czochralski_app-def_schema-and-data.archive.yaml  melt_czochralski_app-def_schema.archive.yaml  movpe_app-def_data.archive.yaml  movpe_app-def_schema.archive.yaml  synthesis_app-def.yaml
HZB_Unold_Lab_plugin/: pyproject.toml
HZB_Unold_Lab_plugin/src/hzb_unold_lab/: parser.py  schema.py
HZB_Unold_Lab_plugin/tests/data/: test_hzb_unold_lab_thermal_evaporation.archive.yaml
IKZ_plugin/: MANIFEST.in  README.md  nomad.yaml  pyproject.toml
IKZ_plugin/src/basesections/: __init__.py
IKZ_plugin/src/basesections_IKZ/: __init__.py
IKZ_plugin/src/characterization/: schema.py
IKZ_plugin/src/cz_IKZ/: __init__.py  nomad_plugin.yaml  parser.py  schema.py
IKZ_plugin/src/czochralski/: nomad_plugin.yaml  parser.py
IKZ_plugin/src/directional_solidification/: __init__.py  nomad_plugin.yaml  parser.py
IKZ_plugin/src/ds_IKZ/: __init__.py  nomad_plugin.yaml  parser.py  schema.py
IKZ_plugin/src/ikz_plugin/: __init__.py  utils.py
IKZ_plugin/src/ikz_plugin/characterization/: __init__.py  schema.py
IKZ_plugin/src/ikz_plugin/czochralski/: __init__.py  nomad_plugin.yaml  parser.py  schema.py
IKZ_plugin/src/ikz_plugin/directional_solidification/: __init__.py  nomad_plugin.yaml  parser.py  schema.py
IKZ_plugin/src/ikz_plugin/general/: __init__.py  general.py  schema.py
IKZ_plugin/src/ikz_plugin/mbe/: __init__.py  schema.py
IKZ_plugin/src/ikz_plugin/movpe/: README.md  __init__.py  schema.py
IKZ_plugin/src/ikz_plugin/movpe/movpe1/: utils.py
IKZ_plugin/src/ikz_plugin/movpe/movpe2/: utils.py
IKZ_plugin/src/ikz_plugin/movpe/movpe2_growth_parser/: nomad_plugin.yaml  parser.py  utils.py
IKZ_plugin/src/ikz_plugin/movpe/movpe_app/: __init__.py
IKZ_plugin/src/ikz_plugin/movpe/substrate/: __init__.py  nomad_plugin.yaml  parser.py  utils.py
IKZ_plugin/src/ikz_plugin/movpe/substrate_parser/: nomad_plugin.yaml  parser.py  utils.py
IKZ_plugin/src/ikz_plugin/pld/: __init__.py  schema.py
IKZ_plugin/src/ikz_plugin/substrate/: schema.py
IKZ_plugin/src/mbe/: __init__.py  schema.py
IKZ_plugin/src/mbe_IKZ/: schema.py
IKZ_plugin/src/movpe/: README.md  schema.py  test_query.http
IKZ_plugin/src/movpe/movpe1_growth_parser/constant_parameters/: __init__.py
IKZ_plugin/src/movpe/movpe1_growth_parser/deposition_control/: nomad_plugin.yaml  parser.py
IKZ_plugin/src/movpe/movpe2_growth_parser/: nomad_plugin.yaml  utils.py
IKZ_plugin/src/movpe/substrate_parser/: __init__.py  nomad_plugin.yaml  parser.py
IKZ_plugin/src/movpe_IKZ/: README.md  nomad_plugin.yaml  parser.py  schema.py
IKZ_plugin/src/movpe_IKZ/binaryoxides_growth_parser/: __init__.py  nomad_plugin.yaml  parser.py
IKZ_plugin/src/movpe_IKZ/complexoxides_growth_parser/: nomad_plugin.yaml  parser.py
IKZ_plugin/src/movpe_IKZ/complexoxides_growth_parser/constant_parameters/: nomad_plugin.yaml  parser.py
IKZ_plugin/src/movpe_IKZ/complexoxides_growth_parser/deposition_control/: nomad_plugin.yaml  parser.py
IKZ_plugin/src/movpe_IKZ/growth_parser/: nomad_plugin.yaml  parser.py
IKZ_plugin/src/movpe_IKZ/movpe1_growth_parser/constant_parameters/: nomad_plugin.yaml  parser.py
IKZ_plugin/src/movpe_IKZ/movpe1_growth_parser/deposition_control/: nomad_plugin.yaml  parser.py
IKZ_plugin/src/movpe_IKZ/movpe2_growth_parser/: nomad_plugin.yaml  parser.py  utils.py
IKZ_plugin/src/movpe_IKZ/substrate_parser/: nomad_plugin.yaml  parser.py
IKZ_plugin/src/movpe_substrates_IKZ/: __init__.py  nomad_plugin.yaml  parser.py
IKZ_plugin/src/substrate/: schema.py
IKZ_plugin/tests/data/directional_solidification/: G1_IKZ_NSI_23.ds.manualprotocol.xlsx  G1_IKZ_NSI_23.ds.recipe.xlsx
IKZ_plugin/tests/data/movpe/movpe1/: Growth_Control_movpe1.xlsx
IKZ_plugin/tests/data/movpe/movpe2/: GaO.growth.movpe.ikz.xlsx
IKZ_plugin/tests/data/movpe_IKZ/movpe2_growth_parser/: GaO.growth.movpe.ikz.xlsx  GaO_test.growth.movpe.ikz.xlsx
IKZ_plugin/tests/data/movpe_IKZ/substrate_parser/: GaO.substrates.movpe.ikz.xlsx  Substrates-for-MOVPE1.xlsx
IKZ_plugin/tests/data/pld/: 26042023_1630-STO-SAO-STO-Alev.dlog  26042023_1630-STO-SAO-STO-Alev.elog  test_ikz_pld_substrate_batch.archive.yaml  test_ikz_pulsed_laser_deposition.archive.yaml
LayTec_EpiTT_plugin/: MANIFEST.in  README.md  pyproject.toml
LayTec_EpiTT_plugin/src/laytec_epitt/: parser.py  schema.py
LayTec_EpiTT_plugin/src/laytec_epitt_plugin/: __init__.py  parser.py  schema.py
LayTec_EpiTT_plugin/src/laytec_epitt_public/: parser.py  schema.py
PVD/PLD/jeremy_ikz/ikz_pld_plugin/: MANIFEST.in  nomad.yaml  pyproject.toml
PVD/PLD/jeremy_ikz/ikz_pld_plugin/tests/: test_schema.py
RTG_SIMS/: README.md  nomad.yaml  pyproject.toml
RTG_SIMS/nomadschemartgsims/: nomad_plugin.yaml  parser.py  schema.py  sims.schema.archive.yaml
RTG_SIMS/tests/: test_schema.py
RTG_SIMS/tests/data/: 22-285-AG.dp_ascii  test.archive.json
analysis_plugin/: README.md  nomad.yaml  pyproject.toml
analysis_plugin/src/analysis/: analysis_source.py  nomad_plugin.yaml  parser.py  schema.py  utils.py
mbe_PDI/: nomad.yaml  pyproject.toml
mbe_PDI/src/mbe_PDI/: epitaxy.py  nomad_plugin.yaml  schema.py
mbe_PDI/src/mbe_PDI/substrate_parser/: __init__.py  nomad_plugin.yaml  parser.py
transmission/transmission_plugin/uv_vis_nir_transmission_plugin/: README.md  header_info.txt  nomad.yaml  pyproject.toml  testpyputpu.yaml  testpyputpu_HT.yaml
transmission/transmission_plugin/uv_vis_nir_transmission_plugin/src/transmission/: __init__.py  material_systems.py  (+4 more)
transmission/transmission_plugin/uv_vis_nir_transmission_plugin/tests/: conftest.py  test_parser.py  test_reader.py  test_schema.py
(+557 files in other folders)
