[build-system]
requires = [ "setuptools>=61.0.0",]
build-backend = "setuptools.build_meta"

[project]
name = "hzb-unold-lab"
version = "0.0.2"
description = "A plugin for NOMAD"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "nomad-lab>=1.2.1",
    "nomad-material-processing>=0.0.7",
    "nomad-hzb-baseclasses>=0.0.1",
]
[project.optional-dependencies]
dev = [
    "pytest",
    "structlog>=22.3.0",
]

[project.license]
file = "LICENSE"

[tool.setuptools.packages.find]
where = [ "src",]
