[build-system]
requires = [
    "setuptools>=61.0.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "analysis-plugin"
version = "0.0.1"
description = "A plugin for analysis using Jupyter notebooks."
readme = "README.md"
authors = [
    { name = "Sarthak Kapoor", email = 'sarthak.kapoor@physik.hu-berlin.de' },
]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
]
dependencies = [
    "nomad-lab>=1.2.1",
    "pytest",
    "structlog==22.3.0",
    "nbformat>=5.9.2",
]

[project.license]
file = "LICENSE"

[tool.setuptools.packages.find]
where = [
    "src",
]
